[project]
name = "activity-store"
version = "0.1.0"
description = "Async-first Python library for storing and retrieving Activity Streams JSON-LD objects and collections"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Vibes Team"}
]
dependencies = [
    "hishel>=0.1.2",
    "orjson>=3.10.18",
    "pyld>=2.0.4",
    "pydantic>=1.10.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "redis>=6.0.0",
    "elasticsearch>=8.18.1",
    "python-dotenv>=1.1.0",
    "aiohttp>=3.11.18",
    "ruff>=0.11.9",
]

[project.optional-dependencies]
es = [
    "elasticsearch>=8.0.0",
    "elasticsearch-dsl>=8.0.0",
]
redis = [
    "redis>=4.3.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["activity_store"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
